apply sonarcloud suggestions